Menambahkan gambar-gambar yang digunakan pada website dan Styling Navigation Bar

--- a/Submission 1/studiu.html
+++ b/Submission 1/studiu.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/img/logo.jpg" type="image/x-icon">
+    <link rel="icon" href="assets/img/studiu_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="studiu.css">
     <title>Studiu</title>
 </head>
 
 <body>
     <header>
-        <nav><img src="" alt="">
+        <nav><img src="assets/img/studiu_logo.png" alt="logo studiu">
             <div class="nav-buttons">Home</div>
             <div class="nav-buttons product">Product</div>
             <div class="nav-buttons">About Me</div>
         </nav>
         <div class="jumbotron">
-            <img src="" alt="">
+            <img src="assets/img/jumbotron_cartoon.png" alt="kartun programming">
             <div class="punchline">
                 <p>The Best Informatics Course in Indonesia</p>
                 <div class="start">
@@ -31,7 +31,8 @@
         <article>
             <div class="wrapper-product">
                 <div class="product AI">
-                    <img src="" alt="">
+                    <img src="assets/img/AI_icon.png" alt="AI Icon">
+                    <h3>Artificial Intelligence</h3>
                     <ul>
                         <li>Algorithms and Machine Learning</li>
                         <li>Neural Networks and Deep Learning</li>
@@ -39,15 +40,17 @@
                     </ul>
                 </div>
                 <div class="product DataScience">
-                    <img src="" alt="">
+                    <img src="assets/img/datascience_icon.png" alt="Data Science Icon">
+                    <h3>Data Science</h3>
                     <ul>
-                        <li>Rekational Database & SQL</li>
+                        <li>Relational Database & SQL</li>
                         <li>Data Visualization</li>
                         <li>Statistics, Probability, Linear Algebra</li>
                     </ul>
                 </div>
                 <div class="product Cyber">
-                    <img src="" alt="">
+                    <img src="assets/img/cyber_icon.png" alt="Cyber Security Icon">
+                    <h3>Cyber Security</h3>
                     <ul>
                         <li>Cyber Threats</li>
                         <li>Network Security Basics</li>
@@ -55,7 +58,8 @@
                     </ul>
                 </div>
                 <div class="product Mobile">
-                    <img src="" alt="">
+                    <img src="assets/img/mobile_icon.png" alt="Mobile Apps Dev Icon">
+                    <h3>Mobile Apps Dev</h3>
                     <ul>
                         <li>Designing Mobile Apps</li>
                         <li>Preparing Mobile Apps</li>
@@ -68,7 +72,7 @@
         <aside>
             <h2>About Me</h2>
             <div class="biodata">
-                <img src="" alt="">
+                <img src="assets/img/biodata_photo.png" alt="">
                 <h3>Muhammad Fadhil Amri</h3>
                 <p>I am an undergraduate student of Computer Science Major. I live in Bandung. By joining this bootcamp, i hope i can learn how to be a web development expert. </p>
             </div>
